<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <Button
        android:id="@+id/backButton"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/back_button"
        app:layout_constraintStart_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/musicReleaseImage"
        />

    <ImageView
        android:id="@+id/musicReleaseImage"
        android:layout_width="200dp"
        android:layout_height="200dp"
        app:layout_constraintTop_toBottomOf="@id/backButton"
        android:layout_marginTop="50dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        />
    
    <TextView
        android:id="@+id/titleText"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/title_placeholder"
        android:textSize="30sp"
        android:textAlignment="center"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/musicReleaseImage"
        />

    <TextView
        android:id="@+id/catNumText"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:text="@string/sample_num"
        android:textSize="22sp"
        android:textAlignment="center"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/titleText"
        />

    <TextView
        android:id="@+id/released_in"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:text="@string/released_in"
        android:textSize="22sp"
        android:textAlignment="center"
        app:layout_constraintStart_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/catNumText"
        app:layout_constraintBottom_toTopOf="@id/yearText"
        />

    <TextView
        android:id="@+id/yearText"
        android:layout_width="match_parent"
        android:layout_height="25dp"
        android:text="@string/sample_year"
        android:textSize="20sp"
        android:textAlignment="center"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/released_in"
        />

    <TextView
        android:id="@+id/countryText"
        android:layout_width="match_parent"
        android:layout_height="25dp"
        android:text="@string/sample_country"
        android:textSize="20sp"
        android:textAlignment="center"
        android:layout_marginTop="10dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/yearText"
        />

    <TextView
        android:id="@+id/releaseText"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/original_release"
        android:textSize="25sp"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:background="@color/green"
        android:layout_marginTop="25dp"
        app:layout_constraintTop_toBottomOf="@id/countryText"
        app:layout_constraintStart_toEndOf="parent"
        />

</androidx.constraintlayout.widget.ConstraintLayout>